<resources>
    <string name="app_name">Temperature conversion</string>
    <string name="temperatura">Temperature</string>
    <string name="Unidade">Units</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="converter">Convert</string>
    <string name="insira_temperatura_validda">Please enter a valid temperature</string>
    <string name="indique_unidades">Please specify a temperature</string>
</resources>